# sifter_webserver_py3

./: .env.example  .gitignore  MyProject.komodoproject  README.md  db.sqlite3  db.sqlite3_old_atomic  manage.py  pyproject.toml
.ipynb_checkpoints/: Untitled0-checkpoint.ipynb  aaa-checkpoint.ipynb
deploy/apache/: sifter.conf
deploy/systemd/: sifter-celery.service  sifter-gunicorn.service
docs/: deployment-ubuntu24.md  python3-migration-baseline.md
estimatedb/: models.py  routers.py
estimatedb/migrations/: 0001_initial.py  0002_allsifterdata_errors_percentiles_sifterdata.py
graphs/migrations/: 0001_initial.py
idmap_db/: models.py  routers.py
idmap_db/migrations/: 0001_initial.py
mul_model/: .nfs00000000013e1fff00000222
my_dbs/: db.sqlite3  estimate.sqlite3  term_db.db  weight_db.sqlite3
pfamdb/: models.py  routers.py
pfamdb/migrations/: 0001_initial.py
results/: models.py  views.py
results/migrations/: 0001_initial.py  0002_delete_sifter_output.py  0003_sifter_output.py  (+18 more)
sifter_results_db/: models.py  routers.py
sifter_results_ready_db/: models.py  routers.py  search_indexes.py  si.py
sifter_web/: celery.py  fileops.py  settings.py  settings_dev.py  settings_prod.py  settings_production.py  tasks.py  urls.py  views.py  wsgi.py
taxid_db/: autocomplete_light_registry.py  models.py  routers.py  search_indexes.py
term_db/: autocomplete_light_registry.py  models.py  routers.py  search_indexes.py
termdb/: models.py
tools/: smoke_test_local.py  smoke_test_sequence_replay.py  validate_runtime_layout.py
weight_db/: models.py  routers.py
(+491 files in other folders)
